# AI-Agent-playground

./: README.md  pyproject.toml  ruff.toml
agno/: __main__.py  simple_agent.py
agno/function_call/: __init__.py  calculation_agent.py
langchain/: __main__.py  simple_agent.py
phidata/: __main__.py  simple_agent.py
phidata/function_call/: __init__.py  calculation_agent.py
