[project]
name = "ai-agent-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.1.12",
    "duckduckgo-search>=7.1.1",
    "langchain-ollama>=0.2.2",
    "langgraph>=0.2.60",
    "ollama>=0.4.4",
    "ruff>=0.8.4",
]
